--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "defaultLanguage": "en-US"
   },
   "devDependencies": {
-    "@fitbit/sdk": "^3.1.3"
+    "@fitbit/sdk": "~4.0.0"
   },
   "dependencies": {
     "@fitbit/sdk-cli": "^1.7.1"
